--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,9 +7,105 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Battle Fest</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<header class="relative">
+			<div class="absolute left-1/2 -translate-x-1/2 flex flex-col justify-center items-center z-10">
+				<img class="w-32 lg:w-64 h-auto" src="logo.webp" alt="Logo">
+				<h1 class="font-boxing text-3xl text-white uppercase font-bold">
+					<span class="bg-clip-text text-transparent bg-gradient-to-b from-indigo-200 via-white-400 to-slate-400 py-1">
+						Battle Fest 
+					</span>
+					<span class="text-amber-300">2023</span></h1>
+			</div>
+		</header>
+		<main>
+
+			<!-- Fighters -->
+			<section 
+				class="flex justify-center relative h-screen pt-24 border-b border-white/100
+				[&>div>img]:absolute 
+				[&>div>img]:bottom-0 
+				[&>div>img]:w-auto
+				[&>div>img]:animate-duration-700 
+				"
+				id="fighters"
+			>
+				<div class="absolute inset-0 bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-[#131313] via-zinc-800 to-zinc-900"></div>
+				<div class="relative w-full">
+					<img class="left-0 h-full z-50" src="boxers/coscu.png" alt="Coscu">
+					<img class="animate-fade-right animate-delay-300 left-[5%] h-[80%] z-40" src="boxers/mayichi.png" alt="mayichi">
+					<img class="animate-fade-right animate-delay-500 left-[13%] h-[75%] z-30" src="boxers/viruzz.png" alt="viruzz">
+					<img class="animate-fade-right animate-delay-700 left-[28%] h-[70%] z-20" src="boxers/fernanfloo.png" alt="fernanfloo">
+					<img class="animate-fade-right animate-delay-1000 left-[38%] h-[65%] z-10" src="boxers/larivers.png" alt="larivers">
+					<img class="animate-fade-right animate-delay-[1300ms] left-[45%] h-[60%] z-0" src="boxers/papigavi.png" alt="papigavi">
+				</div>
+
+				<div class="relative w-full">
+					<img class="right-0 h-full z-50" src="boxers/german.png" alt="german">
+					<img class="animate-fade-left animate-delay-300 right-[7%] h-[80%] z-40" src="boxers/amouranth.png" alt="amouranth">
+					<img class="animate-fade-left animate-delay-500 right-[17%] h-[75%] z-30" src="boxers/shelao.png" alt="shelao">
+					<img class="animate-fade-left animate-delay-700 right-[30%] h-[70%] z-20" src="boxers/luzu.png" alt="luzu">
+					<img class="animate-fade-left animate-delay-1000 right-[40%] h-[65%] z-10" src="boxers/rivers.png" alt="rivers">
+					<img class="animate-fade-left animate-delay-[1300ms] right-[47%] h-[60%] z-0" src="boxers/ampeter.png" alt="Ampeter">
+				</div>
+
+			</section>
+
+			<!-- Event info -->
+			<section id="info" class="absolute bottom-16 z-50 left-1/2 -translate-x-1/2">
+				<div class="flex flex-col">
+					<div class="px-5 pt-4 pb-2 bg-white text-black text-center">
+            <h2 class="font-boxing text-7xl">1 de JULIO</h2>
+          </div>
+					<div class="px-5 pt-2 pb-1 bg-black text-white text-center">
+            <a
+              class="font-boxing text-[46px] hover:contrast-150 hover:scale-105 transition inline-block"
+              href="https://twitch.tv/ibai"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <span class="text-white">twitch.tv/</span><span
+                class="text-yellow-300">ibai</span
+              >
+            </a>
+          </div>
+					<div class="px-5 pt-2 pb-1 bg-blue-600 text-white text-center">
+            <a
+              class="hover:contrast-150 hover:scale-105 transition font-boxing text-4xl inline-block"
+              href="https://twitch.tv/ibai"
+              target="_blank"
+              rel="noopener noreferrer">Buy Tickets</a
+            >
+          </div>
+				</div>
+			</section>
+		</main>
 	</body>
+
+	<style>
+		body {
+      background: #131313;
+    }
+
+    .footer__bg {
+      -webkit-mask-image: linear-gradient(to top, #131313 60%, transparent 98%);
+      -webkit-mask-repeat: no-repeat;
+      mask-image: linear-gradient(to top, #131313 60%, transparent 98%);
+      mask-repeat: no-repeat;
+    }
+
+		@font-face {
+			font-family: "Boxing";
+			src: url("/fonts/boxing.ttf");
+			font-weight: bold;
+		}
+
+		@font-face {
+			font-family: "Boxing Striped";
+			src: url("/fonts/boxing-striped.ttf");
+			font-weight: bold;
+		}
+	</style>
 </html>
