--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -208,6 +208,8 @@
               class="rounded shadow-lg shadow-gray-100 w-full h-auto border border-black/10 invert"
               src="map.webp"
               alt="Mapa con la ubicación del evento"
+              height="100%"
+              width="100%"
             />
           </a>
         </div>
@@ -268,6 +270,8 @@
             src="/footer_logo.webp"
             alt="La Velada del Año"
             class="w-80 h-auto"
+            height="100%"
+            width="100%"
           />
 
           <div class="flex justify-end flex-grow basis-0">
@@ -275,6 +279,8 @@
               src="/partners.webp"
               alt="Patrocinadores de la Velada del Año"
               class="w-64 h-auto"
+              height="100%"
+              width="100%"
             />
           </div>
         </div>
